# local-ai-rpg

./: .gitignore  CLAUDE.md  README.MD  architecture.ipynb  generate.py  pyproject.toml  test_LLM.ipynb  test_json.ipynb
src/: camera.py  classes.py  constants.py  conversation_ui.py  dialogue_manager.py  entities.py  functions.py  game.py  game_classes.py  generate.py  items.py  llm_request_queue.py  loading_indicator.py  main.py  menu.py  name_generator.py  utils.py
src/core/: audio.py  camera.py  constants.py  dialogue_log.py  llm_log.py  particles.py  save.py  utils.py
src/game/: entities.py  events.py  game.py  items.py  loot.py  quest.py  world.py
src/game/entities/: boss.py  buildings.py  entities.py  items.py  monsters.py  npcs.py  player.py  projectile.py  stats.py
src/llm/: dialogue_manager.py  llm_request_queue.py  merchant_system.py  name_generator.py  quest_system.py
src/rpg_ai/: __main__.py
src/ui/: context_window.py  conversation_ui.py  game_renderer.py  inventory_menu.py  loading_indicator.py  main_menu.py  menu.py  notification.py  quest_menu.py  widgets.py
src/ui/menus/: base_menu.py  context_menu.py  game_over.py  help_menu.py  inventory_menu.py  main_menu.py  pause_menu.py  quest_menu.py  shop_menu.py  stats_menu.py
