[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpg-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "llama-cpp-python>=0.3.16",
]

[project.scripts]
game = "rpg_ai.__main__:main"

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "snakeviz",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
package = true
